--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "reanimated-masonry-list": "^1.0.1",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
