--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "reanimated-masonry-list": "^1.0.1",
-    "react-native-gesture-handler": "~2.14.0",
-    "expo-blur": "~12.9.2"
+    "reanimated-masonry-list": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
